--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Example of a Python Flask API service backed by DynamoDB with traditional Serverless Framework",
   "author": "",
   "devDependencies": {
+    "serverless-offline": "^13.3.2",
     "serverless-python-requirements": "^6.0.0",
     "serverless-wsgi": "^3.0.1"
   }
