--- a/requirements.txt
+++ b/requirements.txt
@@ -8,5 +8,7 @@ Flask-SQLAlchemy==3.1.1
 Flask-Migrate==4.0.5
 Flask-Seeder==1.2.0
 bcrypt==4.0.1
+requests==2.31.0
 flask-restful==0.3.10
 flask-cors==4.0.0
+simplejson==3.19.2
